[package]
name = "nuklear-backend-wgpurs"
version = "0.1.0"
authors = ["Serhii Plyhun <snuk188@gmail.com>"]
keywords = ["widgets", "gui", "interface", "graphics", "gfx", "wgpu-rs"]
description = "A gfx-rs drawing backend for Rust wrapper for Nuklear 2D GUI library"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/snuk182/nuklear-backend-wgpurs.git"
homepage = "https://github.com/snuk182/nuklear-backend-wgpurs"
edition = "2018"

[lib]
name = "nuklear_backend_wgpurs"
path = "src/lib.rs"

[dependencies]
log = "~0.3"
wgpu = "~0.2"
nuklear-rust = "~0.6"
glsl-to-spirv = "~0.1"

[features]
default = []
metal = ["wgpu/metal"]
dx11 = ["wgpu/dx11"]
dx12 = ["wgpu/dx12"]
vulkan = ["wgpu/vulkan"]
