[package]
name = "nuklear-backend-wgpurs"
version = "0.3.1"
authors = ["Serhii Plyhun <snuk188@gmail.com>"]
keywords = ["gui", "interface", "graphics", "gfx", "wgpu-rs"]
description = "A Wgpu-rs drawing backend for Rust wrapper for Nuklear 2D GUI library"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/snuk182/nuklear-backend-wgpurs.git"
homepage = "https://github.com/snuk182/nuklear-backend-wgpurs"
edition = "2018"

[lib]
name = "nuklear_backend_wgpurs"
path = "src/lib.rs"

[dependencies]
log = "^0.4.11"
wgpu = "^0.4"
nuklear-rust = "^0.6.2"
glsl-to-spirv = "^0.1.7"

